update: vault implementation ongoing

--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -36,4 +36,4 @@ depends_on = []
 
 [contracts.trait-vault-v1]
 path = "contracts/trait-vault-v1.clar"
-depends_on = ["trait-sip-010"]
+depends_on = ["trait-sip-010","trait-equation-v1"]
