--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1,9 +1,37 @@
 [project]
 name = "alex-v1"
 requirements = []
+[contracts.alex-vault]
+path = "contracts/alex-vault.clar"
+depends_on = ["trait-sip-010"]
+
 [contracts.trait-equation]
 path = "contracts/trait-equation.clar"
 depends_on = []
+
+[contracts.trait-flash-loan-user]
+path = "contracts/trait-flash-loan-user.clar"
+depends_on = ["trait-sip-010"]
+
+[contracts.trait-oracle]
+path = "contracts/trait-oracle.clar"
+depends_on = []
+
+[contracts.trait-pool]
+path = "contracts/trait-pool.clar"
+depends_on = []
+
+[contracts.trait-pool-token]
+path = "contracts/trait-pool-token.clar"
+depends_on = ["trait-sip-010"]
+
+[contracts.trait-sip-010]
+path = "contracts/trait-sip-010.clar"
+depends_on = []
+
+[contracts.trait-vault]
+path = "contracts/trait-vault.clar"
+depends_on = ["trait-sip-010","trait-equation","trait-flash-loan-user"]
 
 [contracts.weighted-equation]
 path = "contracts/weighted-equation.clar"
