--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -11,7 +11,7 @@ depends_on = ["trait-equation","trait-sip-010","trait-pool-token","trait-pool","
 
 [contracts.alex-vault]
 path = "contracts/alex-vault.clar"
-depends_on = ["trait-sip-010"]
+depends_on = ["trait-sip-010","trait-flash-loan-user"]
 
 [contracts.trait-equation]
 path = "contracts/trait-equation.clar"
