fixed point math with exp() and pow() implemented, still missing ln() and log()

--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1,6 +1,7 @@
 [project]
 name = "alex-v1"
 requirements = []
+
 [contracts.alex-vault]
 path = "contracts/alex-vault.clar"
 depends_on = ["trait-sip-010", "trait-flash-loan-user"]
@@ -9,13 +10,17 @@ depends_on = ["trait-sip-010", "trait-flash-loan-user"]
 path = "contracts/collateral-rebalancing-pool.clar"
 depends_on = ["trait-equation", "trait-sip-010", "trait-yield-token", "trait-pool", "trait-vault"]
 
-[contracts.fixed-point]
-path = "contracts/fixed-point.clar"
+[contracts.math-fixed-point]
+path = "contracts/math-fixed-point.clar"
 depends_on = []
 
 [contracts.fixed-weight-pool]
 path = "contracts/fixed-weight-pool.clar"
 depends_on = ["trait-equation", "trait-sip-010", "trait-pool-token", "trait-pool", "trait-vault"]
+
+[contracts.math-log-exp]
+path = "contracts/math-log-exp.clar"
+depends_on = []
 
 [contracts.trait-equation]
 path = "contracts/trait-equation.clar"
