(1) fixed-weight-pool uses weighted-equation directly. (2) fixed-weight-pool / weighted-equation use fixed-point math.

--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -7,11 +7,11 @@ depends_on = ["trait-sip-010", "trait-flash-loan-user"]
 
 [contracts.collateral-rebalancing-pool]
 path = "contracts/collateral-rebalancing-pool.clar"
-depends_on = ["trait-equation", "trait-sip-010", "trait-yield-token", "trait-pool", "trait-vault"]
+depends_on = ["trait-equation", "trait-sip-010", "trait-yield-token", "trait-pool", "trait-vault", "math-fixed-point", "weighted-equation", "alex-vault"]
 
 [contracts.fixed-weight-pool]
 path = "contracts/fixed-weight-pool.clar"
-depends_on = ["trait-equation", "trait-sip-010", "trait-pool-token", "trait-pool", "trait-vault"]
+depends_on = ["trait-equation", "trait-sip-010", "trait-pool-token", "trait-pool", "trait-vault", "math-fixed-point", "weighted-equation", "alex-vault"]
 
 [contracts.math-fixed-point]
 path = "contracts/math-fixed-point.clar"
@@ -55,4 +55,4 @@ depends_on = []
 
 [contracts.weighted-equation]
 path = "contracts/weighted-equation.clar"
-depends_on = ["trait-equation"]
+depends_on = ["trait-equation", "math-fixed-point"]
