--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -33,8 +33,8 @@ depends_on = ["trait-sip-010", "trait-pool-token"]
 path = "contracts/token-alex.clar"
 depends_on = ["trait-sip-010", "trait-alex-token"]
 
-[contracts.token-aytoken]
-path = "contracts/token-aytoken.clar"
+[contracts.token-ayusda]
+path = "contracts/token-ayusda.clar"
 depends_on = ["trait-sip-010", "trait-yield-token"]
 
 [contracts.token-usda]
