--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -3,7 +3,7 @@ name = "alex-v1"
 requirements = []
 [contracts.alex-vault]
 path = "contracts/alex-vault.clar"
-depends_on = ["test-flash-loan-user","trait-vault", "trait-sip-010", "trait-flash-loan-user"]
+depends_on = ["test-flash-loan-user", "trait-vault", "trait-sip-010", "trait-flash-loan-user"]
 
 [contracts.collateral-rebalancing-pool]
 path = "contracts/collateral-rebalancing-pool.clar"
@@ -12,6 +12,10 @@ depends_on = ["trait-sip-010", "trait-yield-token", "trait-vault", "math-fixed-p
 [contracts.fixed-weight-pool]
 path = "contracts/fixed-weight-pool.clar"
 depends_on = ["trait-sip-010", "trait-pool-token", "trait-vault", "math-fixed-point", "weighted-equation"]
+
+[contracts."liquidity-bootstrapping-pool"]
+path = "contracts/liquidity-bootstrapping-pool.clar"
+depends_on = []
 
 [contracts.math-fixed-point]
 path = "contracts/math-fixed-point.clar"
@@ -31,7 +35,7 @@ depends_on = ["trait-sip-010", "trait-pool-token"]
 
 [contracts.test-flash-loan-user]
 path = "contracts/test-flash-loan-user.clar"
-depends_on = ['trait-vault','trait-flash-loan-user','trait-sip-010','trait-vault','fixed-weight-pool']
+depends_on = ["trait-vault", "trait-flash-loan-user", "trait-sip-010", "trait-vault", "fixed-weight-pool"]
 
 [contracts.token-alex]
 path = "contracts/token-alex.clar"
