--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -27,7 +27,7 @@ depends_on = []
 
 [contracts.open-oracle]
 path = "contracts/open-oracle.clar"
-depends_on = ["trait-oracle"]
+depends_on = ["trait-oracle", "yield-token-pool"]
 
 [contracts.pool-token-alex-usda]
 path = "contracts/pool-token-alex-usda.clar"
