--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -1,14 +1,21 @@
 [project]
 name = "alex-v1"
 requirements = []
-
-[contracts.alex-ytp-multisig-vote]
-path = "contracts/alex-ytp-multisig-vote.clar"
-depends_on = ["trait-multisig-vote","pool-token-usda-ayusda","yield-token-pool"]
+[contracts.alex-multisig-registry]
+path = "contracts/alex-multisig-registry.clar"
+depends_on = ["trait-yield-token", "trait-sip-010"]
 
 [contracts.alex-vault]
 path = "contracts/alex-vault.clar"
 depends_on = ["trait-vault", "trait-sip-010", "trait-flash-loan-user", "math-fixed-point"]
+
+[contracts.alex-ytp-multisig-vote]
+path = "contracts/alex-ytp-multisig-vote.clar"
+depends_on = ["trait-multisig-vote", "pool-token-usda-ayusda", "yield-token-pool"]
+
+[contracts.ayusda-wbtc-4380]
+path = "contracts/ayusda-wbtc-4380.clar"
+depends_on = ["trait-sip-010", "trait-yield-token", "token-usda"]
 
 [contracts.collateral-rebalancing-pool]
 path = "contracts/collateral-rebalancing-pool.clar"
@@ -17,6 +24,10 @@ depends_on = ["trait-sip-010", "trait-yield-token", "trait-vault", "math-fixed-p
 [contracts.fixed-weight-pool]
 path = "contracts/fixed-weight-pool.clar"
 depends_on = ["trait-sip-010", "trait-pool-token", "trait-vault", "math-fixed-point", "weighted-equation"]
+
+[contracts.keyusda-wbtc-4380]
+path = "contracts/keyusda-wbtc-4380.clar"
+depends_on = ["trait-sip-010", "trait-yield-token", "token-usda"]
 
 [contracts.liquidity-bootstrapping-pool]
 path = "contracts/liquidity-bootstrapping-pool.clar"
@@ -66,6 +77,7 @@ depends_on = ["trait-sip-010", "trait-alex-token"]
 path = "contracts/trait-alex-token.clar"
 depends_on = []
 
+
 [contracts.trait-flash-loan-user]
 path = "contracts/trait-flash-loan-user.clar"
 depends_on = []
@@ -105,3 +117,11 @@ depends_on = ["math-fixed-point"]
 [contracts.yield-token-pool]
 path = "contracts/yield-token-pool.clar"
 depends_on = ["trait-sip-010", "trait-pool-token", "trait-vault", "trait-flash-loan-user", "math-fixed-point", "yield-token-equation", "trait-yield-token", "open-oracle"]
+
+[contracts.yield-usda-multisig]
+path = "contracts/yield-usda-multisig.clar"
+depends_on = ["trait-multisig-vote", "pool-token-usda-ayusda", "yield-token-pool"]
+
+[contracts.yield-usda-token-pool]
+path = "contracts/yield-usda-token-pool.clar"
+depends_on = ["trait-sip-010", "trait-pool-token", "trait-vault", "trait-flash-loan-user", "math-fixed-point", "yield-token-equation", "trait-yield-token"]
