--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -13,8 +13,8 @@ depends_on = ["trait-vault", "trait-sip-010", "trait-flash-loan-user", "math-fix
 path = "contracts/alex-ytp-multisig-vote.clar"
 depends_on = ["trait-multisig-vote", "pool-token-usda-ayusda", "yield-token-pool"]
 
-[contracts.ayusda-wbtc-4380]
-path = "contracts/ayusda-wbtc-4380.clar"
+[contracts.yield-usda-wbtc-4380]
+path = "contracts/yield-usda-wbtc-4380.clar"
 depends_on = ["trait-sip-010", "trait-yield-token", "token-usda"]
 
 [contracts.collateral-rebalancing-pool]
@@ -25,8 +25,8 @@ depends_on = ["trait-sip-010", "trait-yield-token", "trait-vault", "math-fixed-p
 path = "contracts/fixed-weight-pool.clar"
 depends_on = ["trait-sip-010", "trait-pool-token", "trait-vault", "math-fixed-point", "weighted-equation"]
 
-[contracts.keyusda-wbtc-4380]
-path = "contracts/keyusda-wbtc-4380.clar"
+[contracts.key-usda-wbtc-4380]
+path = "contracts/key-usda-wbtc-4380.clar"
 depends_on = ["trait-sip-010", "trait-yield-token", "token-usda"]
 
 [contracts.liquidity-bootstrapping-pool]
@@ -49,6 +49,10 @@ depends_on = ["trait-yield-token", "trait-oracle", "trait-sip-010"]
 path = "contracts/pool-token-alex-usda.clar"
 depends_on = ["trait-sip-010", "trait-pool-token"]
 
+[contracts.pool-token-ayusda-wbtc]
+path = "contracts/pool-token-ayusda-wbtc.clar"
+depends_on = ["trait-sip-010", "trait-pool-token"]
+
 [contracts.pool-token-usda-ayusda]
 path = "contracts/pool-token-usda-ayusda.clar"
 depends_on = ["trait-sip-010", "trait-pool-token"]
@@ -61,8 +65,8 @@ depends_on = ["trait-flash-loan-user", "trait-vault", "trait-sip-010", "alex-vau
 path = "contracts/token-alex.clar"
 depends_on = ["trait-sip-010", "trait-alex-token"]
 
-[contracts.token-ayusda]
-path = "contracts/token-ayusda.clar"
+[contracts.yield-usda-alex-18530]
+path = "contracts/yield-usda-alex-18530.clar"
 depends_on = ["trait-sip-010", "trait-yield-token", "token-usda"]
 
 [contracts.token-usda]
@@ -76,7 +80,6 @@ depends_on = ["trait-sip-010", "trait-alex-token"]
 [contracts.trait-alex-token]
 path = "contracts/trait-alex-token.clar"
 depends_on = []
-
 
 [contracts.trait-flash-loan-user]
 path = "contracts/trait-flash-loan-user.clar"
@@ -118,10 +121,10 @@ depends_on = ["math-fixed-point"]
 path = "contracts/yield-token-pool.clar"
 depends_on = ["trait-sip-010", "trait-pool-token", "trait-vault", "trait-flash-loan-user", "math-fixed-point", "yield-token-equation", "trait-yield-token", "open-oracle"]
 
-[contracts.yield-usda-multisig]
-path = "contracts/yield-usda-multisig.clar"
+[contracts.multisig-yield-usda-wbtc]
+path = "contracts/multisig-yield-usda-wbtc.clar"
 depends_on = ["trait-multisig-vote", "pool-token-usda-ayusda", "yield-token-pool"]
 
-[contracts.yield-usda-token-pool]
-path = "contracts/yield-usda-token-pool.clar"
+[contracts.yield-token-pool-usda-wbtc]
+path = "contracts/yield-token-pool-usda-wbtc.clar"
 depends_on = ["trait-sip-010", "trait-pool-token", "trait-vault", "trait-flash-loan-user", "math-fixed-point", "yield-token-equation", "trait-yield-token"]
