--- a/clarity/Clarinet.toml
+++ b/clarity/Clarinet.toml
@@ -13,8 +13,8 @@ depends_on = ["trait-vault", "trait-sip-010", "trait-flash-loan-user", "math-fix
 path = "contracts/alex-ytp-multisig-vote.clar"
 depends_on = ["trait-multisig-vote", "pool-token-usda-ayusda", "yield-token-pool"]
 
-[contracts.yield-usda-wbtc-4380]
-path = "contracts/yield-usda-wbtc-4380.clar"
+[contracts.yield-usda-4380]
+path = "contracts/yield-usda-4380.clar"
 depends_on = ["trait-sip-010", "trait-yield-token", "token-usda"]
 
 [contracts.collateral-rebalancing-pool]
@@ -49,8 +49,8 @@ depends_on = ["trait-yield-token", "trait-oracle", "trait-sip-010"]
 path = "contracts/pool-token-alex-usda.clar"
 depends_on = ["trait-sip-010", "trait-pool-token"]
 
-[contracts.pool-token-ayusda-wbtc]
-path = "contracts/pool-token-ayusda-wbtc.clar"
+[contracts.pool-token-yield-usda-wbtc]
+path = "contracts/pool-token-yield-usda-wbtc.clar"
 depends_on = ["trait-sip-010", "trait-pool-token"]
 
 [contracts.pool-token-usda-ayusda]
@@ -65,8 +65,8 @@ depends_on = ["trait-flash-loan-user", "trait-vault", "trait-sip-010", "alex-vau
 path = "contracts/token-alex.clar"
 depends_on = ["trait-sip-010", "trait-alex-token"]
 
-[contracts.yield-usda-alex-18530]
-path = "contracts/yield-usda-alex-18530.clar"
+[contracts.yield-usda-18530]
+path = "contracts/yield-usda-18530.clar"
 depends_on = ["trait-sip-010", "trait-yield-token", "token-usda"]
 
 [contracts.token-usda]
@@ -125,6 +125,6 @@ depends_on = ["trait-sip-010", "trait-pool-token", "trait-vault", "trait-flash-l
 path = "contracts/multisig-yield-usda-wbtc.clar"
 depends_on = ["trait-multisig-vote", "pool-token-usda-ayusda", "yield-token-pool"]
 
-[contracts.yield-token-pool-usda-wbtc]
-path = "contracts/yield-token-pool-usda-wbtc.clar"
+[contracts.yield-usda-pool]
+path = "contracts/yield-usda-pool.clar"
 depends_on = ["trait-sip-010", "trait-pool-token", "trait-vault", "trait-flash-loan-user", "math-fixed-point", "yield-token-equation", "trait-yield-token"]
